fix broken layout home

--- a/src/components/about/styles.module.scss
+++ b/src/components/about/styles.module.scss
@@ -251,16 +251,6 @@
     }
   }
 }
-@media (max-width: 380px) {
-  .container {
-    .container_content {
-      .container_hero {
-        width: 220px;
-        height: 220px;
-      }
-    }
-  }
-}
 @media (max-width: 300px) {
   @media (max-width: 380px) {
     .container {
