--- a/src/components/home/styles.module.scss
+++ b/src/components/home/styles.module.scss
@@ -5,11 +5,12 @@
   justify-content: center;
   align-items: center;
   width: 100%;
+  max-height: 100vh;
   gap: 20px;
   position: absolute;
   text-align: center;
   color: white;
-  background-color: #13131f;
+  background-color: $secondary;
   .particles {
     z-index: 1;
   }
@@ -62,6 +63,7 @@
   z-index: 1;
   width: 100%;
   height: 100%;
+  background-color: $secondary;
   .background_left {
     position: absolute;
     left: -20px;
