--- a/src/components/skills/styles.module.scss
+++ b/src/components/skills/styles.module.scss
@@ -11,6 +11,7 @@
     justify-content: center;
     overflow: hidden;
     .container_left {
+      z-index: 1;
       display: flex;
       justify-content: center;
       align-items: center;
